--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -61,7 +61,7 @@ pipeline {
                 echo '### Creating a new app in DEV env ###'
                 //TODO: Create a new app and expose the service
                 oc project ${DEV_PROJECT}
-                oc new-app --as-deployment-config --name books nodejs:12~${APP_GIT_URL --build-env npm_config_registry=${NEXUS_SERVER} --context-dir ${APP_NAME}
+                oc new-app --as-deployment-config --name books nodejs:12~${APP_GIT_URL} --build-env npm_config_registry=${NEXUS_SERVER} --context-dir ${APP_NAME}
 
                 oc expose svc/${APP_NAME}
 
