--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
         DEV_PROJECT = "txqazr-books-dev"
         STAGE_PROJECT = "txqazr-books-stage"
         APP_GIT_URL = "https://github.com/hubeek/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/nodejs"
+        NEXUS_SERVER = "http://nexus-common.apps.eu45.prod.nextcle.com/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
@@ -62,9 +62,7 @@ pipeline {
                 //TODO: Create a new app and expose the service
                sh '''
                 oc project ${DEV_PROJECT}
-                oc new-app --as-deployment-config --name books nodejs:12~${APP_GIT_URL}
-                --build-env npm_config_registry=${NEXUS_SERVER} 
-                --context-dir ${APP_NAME}
+                oc new-app --as-deployment-config --name books nodejs:12~${APP_GIT_URL} --build-env npm_config_registry=${NEXUS_SERVER} --context-dir ${APP_NAME}
 
                 oc expose svc/${APP_NAME}
                '''
